--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
+    "react-router": "^6.20.1",
+    "react-router-dom": "^6.20.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
